--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "@tiptap/react": "^2.4.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "sweetalert2": "^11.12.0",
