--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
