--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-table": "^8.17.3",
     "@tiptap/react": "^2.4.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
@@ -26,6 +27,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.12.0",
     "swiper": "^11.1.4"
   },
